name:                flaw
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Alexander Bich
maintainer:          quyse0@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/quyse/flaw.git

library
  exposed-modules:     Flaw.Math
  other-modules:       Flaw.MathTH
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8, template-haskell, conduit, conduit-extra, resourcet
  -- hs-source-dirs:      
  default-language:    Haskell2010
