name:                flaw
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Alexander Bich
maintainer:          quyse0@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/quyse/flaw.git

library
  exposed-modules:
    Flaw.Math
    Flaw.Fabric
    Flaw.Window
  if os(windows)
    exposed-modules:
      Flaw.Window.Win32
  other-modules:
    Flaw.Math.Internal
    Flaw.Fabric.Internal
    Flaw.Window.Internal
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8, template-haskell, binary, bytestring, base64-bytestring, text, containers, unordered-containers, cryptohash, cairo
  -- hs-source-dirs:      
  default-language:    Haskell2010
  include-dirs:        include
  if os(windows)
    includes:          "flaw_windows.h"
    c-sources:
      cbits/win32_window_system.c
    extra-libraries:
      gdi32
  cc-options:          -std=c99
