name:                flaw
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Alexander Bich
maintainer:          quyse0@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/quyse/flaw.git

library
  exposed-modules:
    Flaw.Fabric
    Flaw.Math
    Flaw.Window
  if os(windows)
    exposed-modules:
      Flaw.FFI.COM
      Flaw.FFI.COM.IUnknown
      Flaw.Window.Win32
  other-modules:
    Flaw.Fabric.Internal
    Flaw.FFI
    Flaw.Math.Internal
    Flaw.Window.Internal
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8, base64-bytestring, binary, bytestring, containers, cryptohash, mtl, resourcet, template-haskell, text, unordered-containers, uuid
  -- hs-source-dirs:      
  default-language:    Haskell2010
  include-dirs:        include
  if os(windows)
    includes:          "flaw_windows.h"
    c-sources:
      cbits/win32_window_system.c
    extra-libraries:
      gdi32
  cc-options:          -std=c99
