name:                flaw-al
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        ../LICENSE
author:              Alexander Bich
maintainer:          quyse0@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/quyse/flaw.git
  subdir: flaw-al

flag aldebug
  description:       verbose openal runtime error checks
  default:           False
  manual:            True

library
  exposed-modules:
    Flaw.Audio.OpenAL
  other-modules:
    Flaw.Audio.OpenAL.FFI
  build-depends:       base, bytestring, flaw-audio, flaw-base, flaw-math, stm
  if flag(aldebug)
    cpp-options:         -DAL_ERROR_LEVEL=0
  else
    cpp-options:         -DAL_ERROR_LEVEL=1
  -- hs-source-dirs:      
  default-language:    Haskell2010
  extra-libraries:     openal
