name:                flaw-app
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        ../LICENSE
author:              Alexander Bich
maintainer:          quyse0@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/quyse/flaw.git
  subdir: flaw-app

library
  exposed-modules:
    Flaw.App
  other-modules:
  -- other-extensions:    
  build-depends:       base, bytestring, flaw-asset, flaw-base, flaw-build, flaw-graphics, flaw-input, flaw-window, template-haskell, text, time, transformers
  -- hs-source-dirs:      
  default-language:    Haskell2010
  if impl(ghcjs)
    build-depends:       flaw-gl, flaw-js
  else
    if os(windows)
      build-depends:       flaw-dx11
    else
      build-depends:       flaw-gl, flaw-gl-sdl
