name:                flaw-app
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        ../LICENSE
author:              Alexander Bich
maintainer:          quyse0@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/quyse/flaw.git
  subdir: flaw-app

library
  exposed-modules:
    Flaw.App
  other-modules:
  build-depends:       base, bytestring, flaw-asset, flaw-base, flaw-build, flaw-gl, flaw-graphics, flaw-input, flaw-window, template-haskell, text, time, transformers
  default-language:    Haskell2010
  if impl(ghcjs)
    build-depends:       flaw-js
  else
    build-depends:       flaw-vulkan
    if os(windows)
      build-depends:       flaw-dx11, flaw-gl-win32
    else
      build-depends:       flaw-gl-sdl
