name:                flaw-app
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        ../LICENSE
author:              Alexander Bich
maintainer:          quyse0@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/quyse/flaw.git
  subdir: flaw-app

-- all flags are wishes, and ignored if platform doesn't have support for particular feature
flag vulkan
  description:         support Vulkan
  default:             False
  manual:              True
flag dx11
  description:         support DirectX 11
  default:             True
  manual:              True
flag gl
  description:         support OpenGL
  default:             True
  manual:              True

library
  exposed-modules:
    Flaw.App
  other-modules:
  build-depends:       base, bytestring, flaw-asset, flaw-base, flaw-build, flaw-gl, flaw-graphics, flaw-input, flaw-window, template-haskell, text, time, transformers
  default-language:    Haskell2010
  if impl(ghcjs)
    build-depends:       flaw-js
  else
    if flag(vulkan) && (os(linux) || os(windows))
      build-depends:       flaw-vulkan
      cpp-options:         -DFLAW_APP_SUPPORT_VULKAN
    if flag(dx11) && os(windows)
      build-depends:       flaw-dx11
      cpp-options:         -DFLAW_APP_SUPPORT_DX11
    if flag(gl)
      if os(windows)
        build-depends:       flaw-gl-win32
      else
        build-depends:       flaw-gl-sdl
      cpp-options:         -DFLAW_APP_SUPPORT_GL
