name:                flaw-asset-wai
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        ../LICENSE
author:              Alexander Bich
maintainer:          quyse0@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/quyse/flaw.git
  subdir: flaw-asset-wai

library
  exposed-modules:
    Flaw.Asset.Wai
  build-depends:
    base
    , bytestring
    , cryptonite
    , flaw-asset
    , memory
    , mime-types
    , template-haskell
    , text
    , wai-app-static
  ghc-options:         -Wall -Wno-tabs
  default-language:    Haskell2010
