name:                flaw-asset-worker
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        ../LICENSE
author:              Alexander Bich
maintainer:          quyse0@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/quyse/flaw.git
  subdir: flaw-asset-worker

executable flaw-asset-worker
  main-is:             Worker.hs
  build-depends:       base, bytestring, cereal, flaw-asset
  default-language:    Haskell2010
