name:                flaw-asset
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        ../LICENSE
author:              Alexander Bich
maintainer:          quyse0@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/quyse/flaw.git
  subdir: flaw-asset

library
  exposed-modules:
    Flaw.Asset.Exec
    Flaw.Asset.Task
  -- other-extensions:    
  build-depends:       base, bytestring, cereal, process
  -- hs-source-dirs:      
  default-language:    Haskell2010
