name:                flaw-asset
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        ../LICENSE
author:              Alexander Bich
maintainer:          quyse0@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/quyse/flaw.git
  subdir: flaw-asset

library
  exposed-modules:
    Flaw.Asset
    Flaw.Asset.FolderAssetPack
    Flaw.Asset.HashedAssetPack
    Flaw.Asset.HashMapAssetPack
  -- other-extensions:    
  build-depends:       base, bytestring, cereal, cereal-text, cryptonite, flaw-build, hashable, memory, stm, template-haskell, text, unordered-containers
  -- hs-source-dirs:      
  default-language:    Haskell2010
  if impl(ghcjs)
    build-depends:     ghcjs-base
    js-sources:        js/flaw-asset.js
