name:                flaw-asset
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        ../LICENSE
author:              Alexander Bich
maintainer:          quyse0@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/quyse/flaw.git
  subdir: flaw-asset

library
  exposed-modules:
    Flaw.Asset
    Flaw.Asset.FolderAssetPack
    Flaw.Asset.HashMapAssetPack
    Flaw.Asset.RemapAssetPack
  build-depends:
    base
    , bytestring
    , cereal
    , directory
    , flaw-build
    , hashable
    , stm
    , template-haskell
    , text
    , unordered-containers
  ghc-options:         -Wall
  default-language:    Haskell2010
  if impl(ghcjs)
    build-depends:
      flaw-js
      , ghcjs-base
  else
    build-depends:
      cryptonite
      , memory
