name:                flaw-base
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        ../LICENSE
author:              Alexander Bich
maintainer:          quyse0@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/quyse/flaw.git
  subdir: flaw-base

library
  exposed-modules:
    Flaw.Exception
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8, lifted-base, monad-control
  -- hs-source-dirs:      
  default-language:    Haskell2010
  ghc-options:         -O2 -threaded -with-rtsopts=-N -Wall -fno-warn-unsupported-calling-conventions -funbox-strict-fields
