name:                flaw-base
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        ../LICENSE
author:              Alexander Bich
maintainer:          quyse0@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/quyse/flaw.git
  subdir: flaw-base

library
  exposed-modules:
    Flaw.BinaryCache
    Flaw.Book
    Flaw.ByteStream
    Flaw.Exception
    Flaw.Flow
    Flaw.Stack
  -- other-extensions:    
  build-depends:       base, bytestring, stm, transformers, unordered-containers
  -- hs-source-dirs:      
  default-language:    Haskell2010
