name:                flaw-build
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        ../LICENSE
author:              Alexander Bich
maintainer:          quyse0@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/quyse/flaw.git
  subdir: flaw-build

library
  exposed-modules:
    Flaw.Build
  build-depends:
    base
    , bytestring
    , template-haskell
    , text
    , vector
  ghc-options:         -Wall
  default-language:    Haskell2010
