name:                flaw-bullet
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        ../LICENSE
author:              Alexander Bich
maintainer:          quyse0@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/quyse/flaw.git
  subdir: flaw-bullet

library
  exposed-modules:
    Flaw.Physics.Bullet
  -- other-extensions:    
  build-depends:       base, flaw-math, flaw-physics
  -- hs-source-dirs:      
  default-language:    Haskell2010
  c-sources:
    -- integration
    src/flaw-bullet.cpp
    -- bullet
    src/bullet/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp
    src/bullet/src/BulletCollision/BroadphaseCollision/btBroadphaseProxy.cpp
    src/bullet/src/BulletCollision/BroadphaseCollision/btCollisionAlgorithm.cpp
    src/bullet/src/BulletCollision/BroadphaseCollision/btDbvt.cpp
    src/bullet/src/BulletCollision/BroadphaseCollision/btDbvtBroadphase.cpp
    src/bullet/src/BulletCollision/BroadphaseCollision/btDispatcher.cpp
    src/bullet/src/BulletCollision/BroadphaseCollision/btMultiSapBroadphase.cpp
    src/bullet/src/BulletCollision/BroadphaseCollision/btOverlappingPairCache.cpp
    src/bullet/src/BulletCollision/BroadphaseCollision/btQuantizedBvh.cpp
    src/bullet/src/BulletCollision/BroadphaseCollision/btSimpleBroadphase.cpp
    src/bullet/src/BulletCollision/CollisionDispatch/btActivatingCollisionAlgorithm.cpp
    src/bullet/src/BulletCollision/CollisionDispatch/btBox2dBox2dCollisionAlgorithm.cpp
    src/bullet/src/BulletCollision/CollisionDispatch/btBoxBoxCollisionAlgorithm.cpp
    src/bullet/src/BulletCollision/CollisionDispatch/btBoxBoxDetector.cpp
    src/bullet/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.cpp
    src/bullet/src/BulletCollision/CollisionDispatch/btCollisionObject.cpp
    src/bullet/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp
    src/bullet/src/BulletCollision/CollisionDispatch/btCollisionWorldImporter.cpp
    src/bullet/src/BulletCollision/CollisionDispatch/btCompoundCollisionAlgorithm.cpp
    src/bullet/src/BulletCollision/CollisionDispatch/btCompoundCompoundCollisionAlgorithm.cpp
    src/bullet/src/BulletCollision/CollisionDispatch/btConvex2dConvex2dAlgorithm.cpp
    src/bullet/src/BulletCollision/CollisionDispatch/btConvexConcaveCollisionAlgorithm.cpp
    src/bullet/src/BulletCollision/CollisionDispatch/btConvexConvexAlgorithm.cpp
    src/bullet/src/BulletCollision/CollisionDispatch/btConvexPlaneCollisionAlgorithm.cpp
    src/bullet/src/BulletCollision/CollisionDispatch/btDefaultCollisionConfiguration.cpp
    src/bullet/src/BulletCollision/CollisionDispatch/btEmptyCollisionAlgorithm.cpp
    src/bullet/src/BulletCollision/CollisionDispatch/btGhostObject.cpp
    src/bullet/src/BulletCollision/CollisionDispatch/btHashedSimplePairCache.cpp
    src/bullet/src/BulletCollision/CollisionDispatch/btInternalEdgeUtility.cpp
    src/bullet/src/BulletCollision/CollisionDispatch/btManifoldResult.cpp
    src/bullet/src/BulletCollision/CollisionDispatch/btSimulationIslandManager.cpp
    src/bullet/src/BulletCollision/CollisionDispatch/btSphereBoxCollisionAlgorithm.cpp
    src/bullet/src/BulletCollision/CollisionDispatch/btSphereSphereCollisionAlgorithm.cpp
    src/bullet/src/BulletCollision/CollisionDispatch/btSphereTriangleCollisionAlgorithm.cpp
    src/bullet/src/BulletCollision/CollisionDispatch/btUnionFind.cpp
    src/bullet/src/BulletCollision/CollisionDispatch/SphereTriangleDetector.cpp
    src/bullet/src/BulletCollision/CollisionShapes/btBox2dShape.cpp
    src/bullet/src/BulletCollision/CollisionShapes/btBoxShape.cpp
    src/bullet/src/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.cpp
    src/bullet/src/BulletCollision/CollisionShapes/btCapsuleShape.cpp
    src/bullet/src/BulletCollision/CollisionShapes/btCollisionShape.cpp
    src/bullet/src/BulletCollision/CollisionShapes/btCompoundShape.cpp
    src/bullet/src/BulletCollision/CollisionShapes/btConcaveShape.cpp
    src/bullet/src/BulletCollision/CollisionShapes/btConeShape.cpp
    src/bullet/src/BulletCollision/CollisionShapes/btConvex2dShape.cpp
    src/bullet/src/BulletCollision/CollisionShapes/btConvexHullShape.cpp
    src/bullet/src/BulletCollision/CollisionShapes/btConvexInternalShape.cpp
    src/bullet/src/BulletCollision/CollisionShapes/btConvexPointCloudShape.cpp
    src/bullet/src/BulletCollision/CollisionShapes/btConvexPolyhedron.cpp
    src/bullet/src/BulletCollision/CollisionShapes/btConvexShape.cpp
    src/bullet/src/BulletCollision/CollisionShapes/btConvexTriangleMeshShape.cpp
    src/bullet/src/BulletCollision/CollisionShapes/btCylinderShape.cpp
    src/bullet/src/BulletCollision/CollisionShapes/btEmptyShape.cpp
    src/bullet/src/BulletCollision/CollisionShapes/btHeightfieldTerrainShape.cpp
    src/bullet/src/BulletCollision/CollisionShapes/btMinkowskiSumShape.cpp
    src/bullet/src/BulletCollision/CollisionShapes/btMultimaterialTriangleMeshShape.cpp
    src/bullet/src/BulletCollision/CollisionShapes/btMultiSphereShape.cpp
    src/bullet/src/BulletCollision/CollisionShapes/btOptimizedBvh.cpp
    src/bullet/src/BulletCollision/CollisionShapes/btPolyhedralConvexShape.cpp
    src/bullet/src/BulletCollision/CollisionShapes/btScaledBvhTriangleMeshShape.cpp
    src/bullet/src/BulletCollision/CollisionShapes/btShapeHull.cpp
    src/bullet/src/BulletCollision/CollisionShapes/btSphereShape.cpp
    src/bullet/src/BulletCollision/CollisionShapes/btStaticPlaneShape.cpp
    src/bullet/src/BulletCollision/CollisionShapes/btStridingMeshInterface.cpp
    src/bullet/src/BulletCollision/CollisionShapes/btTetrahedronShape.cpp
    src/bullet/src/BulletCollision/CollisionShapes/btTriangleBuffer.cpp
    src/bullet/src/BulletCollision/CollisionShapes/btTriangleCallback.cpp
    src/bullet/src/BulletCollision/CollisionShapes/btTriangleIndexVertexArray.cpp
    src/bullet/src/BulletCollision/CollisionShapes/btTriangleIndexVertexMaterialArray.cpp
    src/bullet/src/BulletCollision/CollisionShapes/btTriangleMesh.cpp
    src/bullet/src/BulletCollision/CollisionShapes/btTriangleMeshShape.cpp
    src/bullet/src/BulletCollision/CollisionShapes/btUniformScalingShape.cpp
    src/bullet/src/BulletCollision/Gimpact/btContactProcessing.cpp
    src/bullet/src/BulletCollision/Gimpact/btGenericPoolAllocator.cpp
    src/bullet/src/BulletCollision/Gimpact/btGImpactBvh.cpp
    src/bullet/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.cpp
    src/bullet/src/BulletCollision/Gimpact/btGImpactQuantizedBvh.cpp
    src/bullet/src/BulletCollision/Gimpact/btGImpactShape.cpp
    src/bullet/src/BulletCollision/Gimpact/btTriangleShapeEx.cpp
    src/bullet/src/BulletCollision/Gimpact/gim_box_set.cpp
    src/bullet/src/BulletCollision/Gimpact/gim_contact.cpp
    src/bullet/src/BulletCollision/Gimpact/gim_memory.cpp
    src/bullet/src/BulletCollision/Gimpact/gim_tri_collision.cpp
    src/bullet/src/BulletCollision/NarrowPhaseCollision/btContinuousConvexCollision.cpp
    src/bullet/src/BulletCollision/NarrowPhaseCollision/btConvexCast.cpp
    src/bullet/src/BulletCollision/NarrowPhaseCollision/btGjkConvexCast.cpp
    src/bullet/src/BulletCollision/NarrowPhaseCollision/btGjkEpa2.cpp
    src/bullet/src/BulletCollision/NarrowPhaseCollision/btGjkEpaPenetrationDepthSolver.cpp
    src/bullet/src/BulletCollision/NarrowPhaseCollision/btGjkPairDetector.cpp
    src/bullet/src/BulletCollision/NarrowPhaseCollision/btMinkowskiPenetrationDepthSolver.cpp
    src/bullet/src/BulletCollision/NarrowPhaseCollision/btPersistentManifold.cpp
    src/bullet/src/BulletCollision/NarrowPhaseCollision/btPolyhedralContactClipping.cpp
    src/bullet/src/BulletCollision/NarrowPhaseCollision/btRaycastCallback.cpp
    src/bullet/src/BulletCollision/NarrowPhaseCollision/btSubSimplexConvexCast.cpp
    src/bullet/src/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.cpp
    src/bullet/src/BulletDynamics/Character/btKinematicCharacterController.cpp
    src/bullet/src/BulletDynamics/ConstraintSolver/btConeTwistConstraint.cpp
    src/bullet/src/BulletDynamics/ConstraintSolver/btContactConstraint.cpp
    src/bullet/src/BulletDynamics/ConstraintSolver/btFixedConstraint.cpp
    src/bullet/src/BulletDynamics/ConstraintSolver/btGearConstraint.cpp
    src/bullet/src/BulletDynamics/ConstraintSolver/btGeneric6DofConstraint.cpp
    src/bullet/src/BulletDynamics/ConstraintSolver/btGeneric6DofSpringConstraint.cpp
    src/bullet/src/BulletDynamics/ConstraintSolver/btHinge2Constraint.cpp
    src/bullet/src/BulletDynamics/ConstraintSolver/btHingeConstraint.cpp
    src/bullet/src/BulletDynamics/ConstraintSolver/btNNCGConstraintSolver.cpp
    src/bullet/src/BulletDynamics/ConstraintSolver/btPoint2PointConstraint.cpp
    src/bullet/src/BulletDynamics/ConstraintSolver/btSequentialImpulseConstraintSolver.cpp
    src/bullet/src/BulletDynamics/ConstraintSolver/btSliderConstraint.cpp
    src/bullet/src/BulletDynamics/ConstraintSolver/btSolve2LinearConstraint.cpp
    src/bullet/src/BulletDynamics/ConstraintSolver/btTypedConstraint.cpp
    src/bullet/src/BulletDynamics/ConstraintSolver/btUniversalConstraint.cpp
    src/bullet/src/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.cpp
    src/bullet/src/BulletDynamics/Dynamics/btRigidBody.cpp
    src/bullet/src/BulletDynamics/Dynamics/btSimpleDynamicsWorld.cpp
    src/bullet/src/BulletDynamics/Featherstone/btMultiBody.cpp
    src/bullet/src/BulletDynamics/Featherstone/btMultiBodyConstraint.cpp
    src/bullet/src/BulletDynamics/Featherstone/btMultiBodyConstraintSolver.cpp
    src/bullet/src/BulletDynamics/Featherstone/btMultiBodyDynamicsWorld.cpp
    src/bullet/src/BulletDynamics/Featherstone/btMultiBodyJointLimitConstraint.cpp
    src/bullet/src/BulletDynamics/Featherstone/btMultiBodyJointMotor.cpp
    src/bullet/src/BulletDynamics/Featherstone/btMultiBodyPoint2Point.cpp
    src/bullet/src/BulletDynamics/MLCPSolvers/btDantzigLCP.cpp
    src/bullet/src/BulletDynamics/MLCPSolvers/btLemkeAlgorithm.cpp
    src/bullet/src/BulletDynamics/MLCPSolvers/btMLCPSolver.cpp
    src/bullet/src/BulletDynamics/Vehicle/btRaycastVehicle.cpp
    src/bullet/src/BulletDynamics/Vehicle/btWheelInfo.cpp
    src/bullet/src/BulletSoftBody/btDefaultSoftBodySolver.cpp
    src/bullet/src/BulletSoftBody/btSoftBody.cpp
    src/bullet/src/BulletSoftBody/btSoftBodyConcaveCollisionAlgorithm.cpp
    src/bullet/src/BulletSoftBody/btSoftBodyHelpers.cpp
    src/bullet/src/BulletSoftBody/btSoftBodyRigidBodyCollisionConfiguration.cpp
    src/bullet/src/BulletSoftBody/btSoftRigidCollisionAlgorithm.cpp
    src/bullet/src/BulletSoftBody/btSoftRigidDynamicsWorld.cpp
    src/bullet/src/BulletSoftBody/btSoftSoftCollisionAlgorithm.cpp
    src/bullet/src/LinearMath/btAlignedAllocator.cpp
    src/bullet/src/LinearMath/btConvexHull.cpp
    src/bullet/src/LinearMath/btConvexHullComputer.cpp
    src/bullet/src/LinearMath/btGeometryUtil.cpp
    src/bullet/src/LinearMath/btPolarDecomposition.cpp
    src/bullet/src/LinearMath/btQuickprof.cpp
    src/bullet/src/LinearMath/btSerializer.cpp
    src/bullet/src/LinearMath/btVector3.cpp
  include-dirs:        src/bullet/src
  cc-options:          -O3 -fno-exceptions
