name:                flaw-canvas
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        ../LICENSE
author:              Alexander Bich
maintainer:          quyse0@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/quyse/flaw.git
  subdir: flaw-canvas

library
  exposed-modules:
    Flaw.Graphics.Canvas
    Flaw.Graphics.Sprite
  build-depends:
    base
    , bytestring
    , data-default
    , flaw-base
    , flaw-graphics
    , flaw-math
    , mtl
    , vector
  ghc-options:         -Wall
  default-language:    Haskell2010
