name:                flaw-collada
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        ../LICENSE
author:              Alexander Bich
maintainer:          quyse0@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/quyse/flaw.git
  subdir: flaw-collada

library
  exposed-modules:
    Flaw.Asset.Collada
  build-depends:
    base
    , bytestring
    , containers
    , flaw-math
    , mtl
    , text
    , vector
    , vector-algorithms
    , xml-conduit
  ghc-options:         -Wall -Wno-tabs
  default-language:    Haskell2010
