name:                flaw-dx11
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        ../LICENSE
author:              Alexander Bich
maintainer:          quyse0@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/quyse/flaw.git
  subdir: flaw-dx11

library
  exposed-modules:
    Flaw.Graphics.DirectX11
    Flaw.Graphics.DirectX11.FFI
    Flaw.Graphics.DirectX11.HLSL
    Flaw.Graphics.DXGI
    Flaw.Graphics.DXGI.FFI
  other-modules:
    Flaw.Graphics.DirectX11.Internal
    Flaw.Graphics.DXGI.Internal
  -- other-extensions:    
  build-depends:       array, base >=4.7 && <4.8, bytestring, flaw-base, flaw-ffi, flaw-graphics, flaw-math, flaw-sl, flaw-window, lifted-base, monad-control, mtl, resourcet, text, transformers, transformers-base
  -- hs-source-dirs:      
  default-language:    Haskell2010
