name:                flaw-editor
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        ../LICENSE
author:              Alexander Bich
maintainer:          quyse0@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/quyse/flaw.git
  subdir: flaw-editor

library
  exposed-modules:
    Flaw.Editor.ProcessingCache
    Flaw.Editor.Project
    Flaw.UI.Editor.Editable
    Flaw.UI.Editor.Editable.Basic
    Flaw.UI.Editor.Elements
    Flaw.UI.Editor.FileDialog
    Flaw.UI.RenderBox
  other-modules:
  -- other-extensions:    
  build-depends:
    aeson
    , base
    , bytestring
    , directory
    , filepath
    , flaw-base
    , flaw-graphics
    , flaw-math
    , flaw-oil-entity
    , flaw-sqlite
    , flaw-ui
    , mtl
    , stm
    , text
  -- hs-source-dirs:      
  default-language:    Haskell2010

executable flaw-editor
  main-is:             editor.hs
  other-modules:
  hs-source-dirs:      exe
  build-depends:
    base
    , bytestring
    , flaw-app
    , flaw-asset-dxt
    , flaw-base
    , flaw-collada
    , flaw-editor
    , flaw-graphics
    , flaw-input
    , flaw-math
    , flaw-oil
    , flaw-oil-entity
    , flaw-ui
    , flaw-ui-default-style
    , flaw-visual
    , flaw-window
    , http-client
    , optparse-applicative
    , stm
    , text
    , vector
  if os(windows)
    ld-options:          -Wl,--subsystem,windows
  default-language:    Haskell2010

executable model-editor
  main-is:             model-editor.hs
  other-modules:
  hs-source-dirs:      exe
  build-depends:       base, bytestring, cereal, flaw-app, flaw-asset-dxt, flaw-base, flaw-collada, flaw-editor, flaw-graphics, flaw-input, flaw-math, flaw-ui, flaw-ui-default-style, flaw-visual, flaw-window, mtl, stm, text, transformers, vector
  if os(windows)
    ld-options:          -Wl,--subsystem,windows
  default-language:    Haskell2010
