name:                flaw-editor
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        ../LICENSE
author:              Alexander Bich
maintainer:          quyse0@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/quyse/flaw.git
  subdir: flaw-editor

library
  exposed-modules:
    Flaw.Editor.BlobService
    Flaw.Editor.Entity
    Flaw.Editor.Entity.Basic
    Flaw.Editor.Entity.Blob
    Flaw.Editor.Entity.Internal
    Flaw.Editor.Entity.Tag
    Flaw.Editor.Entity.Tag.Basic
    Flaw.Editor.Entity.Texture
    Flaw.Editor.Processing
    Flaw.Editor.ProcessingCache
    Flaw.Editor.Project
    Flaw.UI.Editor.EditableEntity
    Flaw.UI.Editor.EditableEntity.Basic
    Flaw.UI.Editor.Elements
    Flaw.UI.Editor.FileDialog
    Flaw.UI.RenderBox
  other-modules:
  -- other-extensions:    
  build-depends:
    aeson
    , base
    , bytestring
    , cereal
    , cereal-text
    , cryptonite
    , data-default
    , directory
    , filepath
    , flaw-asset-dxt
    , flaw-base
    , flaw-build
    , flaw-graphics
    , flaw-math
    , flaw-oil
    , flaw-sqlite
    , flaw-ui
    , flaw-visual
    , http-client
    , memory
    , mtl
    , stm
    , template-haskell
    , text
  -- hs-source-dirs:      
  default-language:    Haskell2010

executable flaw-editor
  main-is:             editor.hs
  other-modules:
  hs-source-dirs:      exe
  build-depends:
    base
    , bytestring
    , flaw-app
    , flaw-asset-dxt
    , flaw-base
    , flaw-collada
    , flaw-editor
    , flaw-graphics
    , flaw-input
    , flaw-math
    , flaw-oil
    , flaw-ui
    , flaw-ui-default-style
    , flaw-visual
    , flaw-window
    , http-client
    , optparse-applicative
    , stm
    , text
    , vector
    , yaml
  if os(windows)
    ld-options:          -Wl,--subsystem,windows
  default-language:    Haskell2010

executable model-editor
  main-is:             model-editor.hs
  other-modules:
  hs-source-dirs:      exe
  build-depends:       base, bytestring, cereal, flaw-app, flaw-asset-dxt, flaw-base, flaw-collada, flaw-editor, flaw-graphics, flaw-input, flaw-math, flaw-ui, flaw-ui-default-style, flaw-visual, flaw-window, mtl, stm, text, transformers, vector
  if os(windows)
    ld-options:          -Wl,--subsystem,windows
  default-language:    Haskell2010

test-suite entity-test
  type:                exitcode-stdio-1.0
  main-is:             entity-test.hs
  hs-source-dirs:      test
  build-depends:       base, containers, flaw-base, flaw-editor, flaw-oil, stm
  default-language:    Haskell2010
